# counterflow-nn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: AbsorptionTower.md  CFNN_Execution_Plan.md  CFNN_Technical_Documentation.md
experiments/: compare_baselines.py  tier0_physical_validation.py  tier1_absorption_benchmark.py  tier1_synthetic.py  tier2_distillation.py  tier3_mnist.py
notebooks/: 00_run_experiments.ipynb  01_phase2_distillation.ipynb  02_visualization_and_theory.ipynb
src/: __init__.py  absorption_tower.py  activations.py  diagnostics.py  distillation.py  network.py  plates.py  utils.py  visualization.py
tests/: test_absorption_tower.py  test_distillation.py  test_plates.py
