[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counterflow-nn"
version = "0.1.0"
description = "CounterFlow Neural Network: A neural architecture inspired by chemical engineering unit operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Daniel Regalado Cardoso", email = "dxr1491@miami.edu"},
]
keywords = ["neural-network", "chemical-engineering", "counterflow", "absorption", "distillation", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "mypy>=1.5.0"]
demo = ["gradio>=4.0.0", "seaborn>=0.12.0", "pandas>=2.0.0"]

[project.urls]
Homepage = "https://github.com/DanielRegaladoUMiami/counterflow-nn"
Documentation = "https://github.com/DanielRegaladoUMiami/counterflow-nn/tree/main/docs"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
